2004-01-28  Saito <saito2@digitalme.com>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix "TONE MAP-0 NUMBER".
	  Fix around select_play_sample().
	  Fix about modulation wheel depth.

2004-01-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/wrd_read.c:
	  Fix bug

2004-01-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* INSTALL(.jp), README(.jp):
	  Update README and INSTALL
	* doc/C/{timidity.1,timidity.cfg.5},
	  doc/ja_JP.ujis/{timidity.1,timidity.cfg.5}:
	  Fix typo

2004-01-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Rewrite and fix typo a little

2004-01-26  mput <root@mput.dip.jp>

	* doc/C/timidity.1: Remove Japanese characters
	* doc/ja_JP.ujis/timidity.1: Add some missed entries

2004-01-26  Saito <saito2@digitalme.com>

	* timidity/playmidi.h, timidity/mix.c:
	  Fix envelope generator.

2004-01-25  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1:
	  Update man page of timidity.1
	  TODO: Translate some new items into English
	* timidity/timidity.c (parse_opt_h): Fix typo

2004-01-25  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c, timidity/readmidi.c: Fixed channel layer.

2004-01-24  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed event filtering.
	* timidity/timidity.c: Added tone->rnddelay (re)initialization.

2004-01-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Fix typo

2004-01-22  mput <root@mput.dip.jp>

	* doc/C/timidity.cfg.5: update to fit with ranvis' patch
	* doc/ja_JP.ujis/timidity.cfg.5: ditto

2004-01-22  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.h, timidity/playmidi.c,
	  timidity/readmidi.c, timidity/timidity.c:
	  Removed GM2 default MSB support.	
	  Added new map 'gm2[drum]' (GM2) and 'sc8850[drum]' (GS LSB=4).
	  Note that although GS LSB=4 indicates both SC-8820 and SC-8850
	  and they're mapped identically, waveforms in the actual
	  hardwares differ.
