@@ -1,3 +1,8 @@
+2004-01-29  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* timidity/playmidi.c, timidity/readmidi.c:
+	  Hack up around find_samples()
+
 2004-01-28  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.c, timidity/readmidi.c:
